@@ -56,7 +56,8 @@ class GetConfig
         $sql = "SELECT
                     `CCD_ID` as `revisionId`,
                     `CCD_Cloud_Config_ID` as `cloudConfigId`,
-                    `CCD_Data` as `data`
+                    `CCD_Data` as `data`,
+                    `CCD_Enviroment_Variables` as `envVariables`
                 FROM
                     `Cloud_Config_Data`
                 WHERE
