@@ -1,3 +1,8 @@
+Unreleased
+
+Added
+    Store enviorment variable with cloud-config rev (#70)
+
 0.5.0
 
 Fixed
